--- a/src/pages/rfq.astro
+++ b/src/pages/rfq.astro
@@ -109,7 +109,7 @@ import warehouseImg from '@assets/photo-1563013544-824ae1b704d3.jpg';
               </div>
               <div>
                 <div class="font-semibold text-gray-900">Email</div>
-                <div class="text-gray-600 font-medium">quotes@astroflow.com</div>
+                <div class="text-gray-600 font-medium">quotes@.otutu.co</div>
                 <div class="text-gray-500 text-xs">24-hour response time</div>
               </div>
             </div>
