Refactor code structure for improved readability and maintainability

--- a/src/components/home/PremiumCTA.astro
+++ b/src/components/home/PremiumCTA.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import Button from '../ui/Button.astro';
-import warehouseBgImg from '@assets/photo-1553413077-190dd305871c.jpg';
+import warehouseBgImg from '@assets/photo-1553413077-190dd305871c.avif';
 ---
 
 <section class="relative py-32 overflow-hidden">
