--- a/src/components/home/ProcessWorkflow.astro
+++ b/src/components/home/ProcessWorkflow.astro
@@ -1,10 +1,10 @@
 ---
 import { Image } from 'astro:assets';
 
-import discoveryImg from '@assets/photo-1454165804606-c3d57bc86b40.jpg';
-import implementationImg from '@assets/photo-1522071820081-009f0129c71c.jpg';
-import optimizationImg from '@assets/photo-1551288049-bebda4e38f71.jpg';
-import supportGrowthImg from '@assets/photo-1552664730-d307ca884978.jpg';
+import discoveryImg from '@assets/photo-1454165804606-c3d57bc86b40.avif';
+import implementationImg from '@assets/photo-1522071820081-009f0129c71c.avif';
+import optimizationImg from '@assets/photo-1551288049-bebda4e38f71.avif';
+import supportGrowthImg from '@assets/photo-1552664730-d307ca884978.avif';
 
 interface Step {
   number: number;
