--- a/src/components/home/StatsShowcase.astro
+++ b/src/components/home/StatsShowcase.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 import AnimatedStats from '../react/AnimatedStats';
-import logisticsNetworkImg from '@assets/photo-1578575437130-527eed3abbec.jpg';
+import logisticsNetworkImg from '@assets/photo-1578575437130-527eed3abbec.avif';
 ---
 
 <section class="relative py-24 overflow-hidden">
