--- a/src/components/home/TechnologyInnovation.astro
+++ b/src/components/home/TechnologyInnovation.astro
@@ -1,6 +1,6 @@
 ---
 import { Image } from 'astro:assets';
-import techDashboardImg from '@assets/photo-1551288049-bebda4e38f71.jpg';
+import techDashboardImg from '@assets/photo-1551288049-bebda4e38f71.avif';
 
 interface Technology {
   title: string;
