--- a/src/components/home/Testimonials.astro
+++ b/src/components/home/Testimonials.astro
@@ -1,9 +1,9 @@
 ---
 import TestimonialCard from '../ui/TestimonialCard.astro';
 
-import testimonial1Img from '@assets/photo-1494790108377-be9c29b29330.jpg';
-import testimonial2Img from '@assets/photo-1507003211169-0a1dd7228f2d.jpg';
-import testimonial3Img from '@assets/photo-1438761681033-6461ffad8d80.jpg';
+import testimonial1Img from '@assets/photo-1494790108377-be9c29b29330.avif';
+import testimonial2Img from '@assets/photo-1507003211169-0a1dd7228f2d.avif';
+import testimonial3Img from '@assets/photo-1438761681033-6461ffad8d80.avif';
 
 const testimonials= [
   {
