--- a/src/pages/documentation.astro
+++ b/src/pages/documentation.astro
@@ -5,14 +5,14 @@ import Card from '../components/ui/Card.astro';
 import ImageReveal from '../components/react/ImageReveal';
 import { Image } from 'astro:assets';
 
-import gettingStartedImg from '@assets/photo-1451187580459-43490279c0fa.jpg';
-import onboardingChecklistImg from '@assets/photo-1486406146926-c627a92ad1ab.jpg';
-import serviceOverviewImg from '@assets/photo-1550751827-4bd374c3f58b.jpg';
-import technicalDocumentationImg from '@assets/photo-1454165804606-c3d57bc86b40.jpg';
-import operationsManualImg from '@assets/photo-1521737604893-d14cc237f11d.jpg';
+import gettingStartedImg from '@assets/photo-1451187580459-43490279c0fa.avif';
+import onboardingChecklistImg from '@assets/photo-1486406146926-c627a92ad1ab.avif';
+import serviceOverviewImg from '@assets/photo-1550751827-4bd374c3f58b.avif';
+import technicalDocumentationImg from '@assets/photo-1454165804606-c3d57bc86b40.avif';
+import operationsManualImg from '@assets/photo-1521737604893-d14cc237f11d.avif';
 
-import formsTemplatesImg from '@assets/photo-1450101499163-c8848c66ca85.jpg';
-import heroBgImg from '@assets/photo-1454165804606-c3d57bc86b40.jpg';
+import formsTemplatesImg from '@assets/photo-1450101499163-c8848c66ca85.avif';
+import heroBgImg from '@assets/photo-1454165804606-c3d57bc86b40.avif';
 
 // Icon SVG paths
 const iconPaths = {
