--- a/src/pages/rfq.astro
+++ b/src/pages/rfq.astro
@@ -5,8 +5,8 @@ import Card from '@components/ui/Card.astro';
 import RFQForm from '@components/react/RFQForm';
 import { Image } from 'astro:assets';
 import { FileText, Clock, Shield, CheckCircle2, Phone, Mail, MessageCircle, Award, TrendingUp, Users } from 'lucide-react';
-import rfqBgImg from '@assets/photo-1558618666-fcd25c85cd64.jpg';
-import warehouseImg from '@assets/photo-1563013544-824ae1b704d3.jpg';
+import rfqBgImg from '@assets/photo-1558618666-fcd25c85cd64.avif';
+import warehouseImg from '@assets/photo-1563013544-824ae1b704d3.avif';
 ---
 
 <BaseLayout title="Request a Quote - Get Started Today">
