--- a/src/pages/use-cases.astro
+++ b/src/pages/use-cases.astro
@@ -7,19 +7,19 @@ import UseCaseTabs from '@components/react/UseCaseTabs';
 import StatsCards from '@components/react/StatsCards';
 import { Image } from 'astro:assets';
 
-import ecommerceImg from '@assets/photo-1607082349566-187342175e2f.jpg';
-import healthcareImg from '@assets/photo-1587854692152-cbe660dbde88.jpg';
-import automotiveImg from '@assets/photo-1581091226825-a6a2a5aee158.jpg';
-import technologyImg from '@assets/photo-1518770660439-4636190af475.jpg';
-import consumerGoodsImg from '@assets/photo-1558618666-fcd25c85cd64.jpg';
-import foodBeverageImg from '@assets/photo-1542838132-92c53300491e.jpg';
+import ecommerceImg from '@assets/photo-1607082349566-187342175e2f.avif';
+import healthcareImg from '@assets/photo-1587854692152-cbe660dbde88.avif';
+import automotiveImg from '@assets/photo-1581091226825-a6a2a5aee158.avif';
+import technologyImg from '@assets/photo-1518770660439-4636190af475.avif';
+import consumerGoodsImg from '@assets/photo-1558618666-fcd25c85cd64.avif';
+import foodBeverageImg from '@assets/photo-1542838132-92c53300491e.avif';
 
-import testimonial1Img from '@assets/photo-1494790108377-be9c29b29330.jpg';
-import testimonial2Img from '@assets/photo-1559839734-2b71ea197ec2.jpg';
-import testimonial3Img from '@assets/photo-1507003211169-0a1dd7228f2d.jpg';
+import testimonial1Img from '@assets/photo-1494790108377-be9c29b29330.avif';
+import testimonial2Img from '@assets/photo-1559839734-2b71ea197ec2.avif';
+import testimonial3Img from '@assets/photo-1507003211169-0a1dd7228f2d.avif';
 
-import heroBgImg from '@assets/photo-1551288049-bebda4e38f71.jpg';
-import ctaBgImg from '@assets/photo-1553413077-190dd305871c.jpg';
+import heroBgImg from '@assets/photo-1551288049-bebda4e38f71.avif';
+import ctaBgImg from '@assets/photo-1553413077-190dd305871c.avif';
 
 const useCases:any[] = [
   {
