--- a/src/components/home/ImageGrid.astro
+++ b/src/components/home/ImageGrid.astro
@@ -1,11 +1,11 @@
 ---
 import ImageReveal from '@components/react/ImageReveal';
 import { Image } from 'astro:assets';
-import warehouseImg from '@assets/photo-1566576721346-d4a3b4eaeb55.jpg';
-import fleetImg from '@assets/photo-1601584115197-04ecc0da31d7.jpg';
-import manufacturingImg from '@assets/photo-1581091226825-a6a2a5aee158.jpg';
-import commandCenterImg from '@assets/photo-1551288049-bebda4e38f71.jpg';
-import distributionImg from '@assets/photo-1586528116311-ad8dd3c8310d.jpg';
+import warehouseImg from '@assets/photo-1566576721346-d4a3b4eaeb55.avif';
+import fleetImg from '@assets/photo-1601584115197-04ecc0da31d7.avif';
+import manufacturingImg from '@assets/photo-1581091226825-a6a2a5aee158.avif';
+import commandCenterImg from '@assets/photo-1551288049-bebda4e38f71.avif';
+import distributionImg from '@assets/photo-1586528116311-ad8dd3c8310d.avif';
 ---
 
 <section class="py-24 bg-white">
