--- a/src/pages/capabilities.astro
+++ b/src/pages/capabilities.astro
@@ -7,14 +7,14 @@ import CapabilityAccordion from '../components/react/CapabilityAccordion';
 import { Image } from 'astro:assets';
 import ImageReveal from '../components/react/ImageReveal';
 
-import warehouseImg from '@assets/photo-1566576721346-d4a3b4eaeb55.jpg';
-import manufacturingImg from '@assets/photo-1581091226825-a6a2a5aee158.jpg';
-import transportationImg from '@assets/photo-1601584115197-04ecc0da31d7.jpg';
-import supplyChainImg from '@assets/photo-1460925895917-afdab827c52f.jpg';
-import valueAddedServicesImg from '@assets/photo-1558618666-fcd25c85cd64.jpg';
-import technologyIntegrationImg from '@assets/photo-1558494949-ef010cbdcc31.jpg';
-import heroBgImg from '@assets/photo-1586528116311-ad8dd3c8310d.jpg';
-import ctaBgImg from '@assets/photo-1553413077-190dd305871c.jpg';
+import warehouseImg from '@assets/photo-1566576721346-d4a3b4eaeb55.avif';
+import manufacturingImg from '@assets/photo-1581091226825-a6a2a5aee158.avif';
+import transportationImg from '@assets/photo-1601584115197-04ecc0da31d7.avif';
+import supplyChainImg from '@assets/photo-1460925895917-afdab827c52f.avif';
+import valueAddedServicesImg from '@assets/photo-1558618666-fcd25c85cd64.avif';
+import technologyIntegrationImg from '@assets/photo-1558494949-ef010cbdcc31.avif';
+import heroBgImg from '@assets/photo-1586528116311-ad8dd3c8310d.avif';
+import ctaBgImg from '@assets/photo-1553413077-190dd305871c.avif';
 
 const capabilities = [
   {
