--- a/src/pages/facilities.astro
+++ b/src/pages/facilities.astro
@@ -7,14 +7,14 @@ import { Image } from 'astro:assets';
 import ImageReveal from '../components/react/ImageReveal';
 import FacilityStats from '../components/react/FacilityStats';
 
-import northAmericanHubImg from '@assets/photo-1566576721346-d4a3b4eaeb55.jpg';
-import westCoastDistributionImg from '@assets/photo-1586528116311-ad8dd3c8310d.jpg';
-import eastCoastOperationsImg from '@assets/photo-1553413077-190dd305871c.jpg';
-import southernManufacturingCenterImg from '@assets/photo-1581091226825-a6a2a5aee158.jpg';
-import midwestColdStorageImg from '@assets/photo-1601584115197-04ecc0da31d7.jpg';
-import southeastDistributionImg from '@assets/photo-1558618666-fcd25c85cd64.jpg';
+import northAmericanHubImg from '@assets/photo-1566576721346-d4a3b4eaeb55.avif';
+import westCoastDistributionImg from '@assets/photo-1586528116311-ad8dd3c8310d.avif';
+import eastCoastOperationsImg from '@assets/photo-1553413077-190dd305871c.avif';
+import southernManufacturingCenterImg from '@assets/photo-1581091226825-a6a2a5aee158.avif';
+import midwestColdStorageImg from '@assets/photo-1601584115197-04ecc0da31d7.avif';
+import southeastDistributionImg from '@assets/photo-1558618666-fcd25c85cd64.avif';
 
-import ctaBgImg from '@assets/photo-1565043589221-1a6fd9ae45c7.jpg';
+import ctaBgImg from '@assets/photo-1565043589221-1a6fd9ae45c7.avif';
 
 const facilities = [
   {
